About: A basic hurricane simulator made for the Hypothetical Hurricanes Wiki. Soon to be more advanced.

v20181026b:
    * Fixed SHem steering behaving even more drunk than the NHem already is
        > Both hemispheres still drunk; just SHem isn't as drunk
v20181026a:
    + Crikey mate! Added the southern hemisphere
        > No whole-world added yet, so a basin is just one hemisphere or the other; 50/50 chance at generation
    + Added a 'basin' object and moved some variables there for future saving/loading and user management of basin settings
    * Now displays "Land rendering..." while the land is rendering instead of holding the page in a loading cycle
v20181024b:
    + Added snow that changes with the time of year for aesthetics
        > Snow depends on both elevation and latitude to give a realistic look
    * Cleaned up code for colors so they're actually defined in constants.js, and made land colors less hardcoded
v20181024a:
    * Changed land colors to make land look better
    * Changed how selected storm outlines are drawn to make them look better
    * Split the code into multiple files to begin some cleanup and refactoring
    * Some attempt at fixing subtropical cyclones so they're less nonexistant
    * Slightly lowered spawn rate
    * Land generation is now seeded with the time, which is stored in a "seed" variable
v20181015a:
    + Added a makeshift "track forecast" to selected storms; yellow dots show where the storm might go (is often wrong!)
v20181014a:
    * Fujiwhara tweaked to make stronger storms and extratropical systems more "dominant" in the interaction
    * Simulation speed now works in powers of 2, with a 6th speed option added
        > Full-Speed, Half-Speed, 1/4 Speed, 1/8 Speed, 1/16 Speed, and 1/32 Speed
    * When a storm is selected, only the selected storm's track shows
v20181013a:
    + Readded subtropical storms, using different mechanics
    + Added fujiwhara interaction (Might need tweaking)